upgrade to 1.21